<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_photo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="104dp"
        android:layout_height="103dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="73dp"
        android:layout_toStartOf="@+id/cart"
        android:layout_toEndOf="@+id/category"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/cart"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/cart"
        app:srcCompat="@drawable/cart" />

    <ImageView
        android:id="@+id/category"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/category"
        app:srcCompat="@drawable/category" />

    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="50dp"
        android:text="@string/product_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/product_name"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/product_image"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_image"
        android:text="@string/product_description"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    </RelativeLayout>
